# wax_string

./: .gitignore  CMakeLists.txt  Makefile
doc/: doxygen.conf
src/: edit.cpp  format.cpp  libmain.cpp  parse.cpp  version.h.in
src/str/: compose  dict  edit  format  parse
src/str/impl/: compose.hpp  cstr.hpp  dict.hpp  edit.hpp  fix_regex.hpp  format.hpp  hash.hpp  parse.hpp
test/: CMakeLists.txt  googletest  test_compose.cpp  test_cstr.cpp  test_edit.cpp  test_format.cpp  test_hash.cpp  test_parse.cpp
